log
Thu 18 Aug 2022 02:02:23 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:5: error: ‘lista’ undeclared (first use in this function)
   32 |     lista->inicio=NULL;
      |     ^~~~~
list.c:32:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a878d49
Thu 18 Aug 2022 02:02:48 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: expected identifier or ‘(’ before ‘->’ token
   32 |     List->inicio=NULL;
      |         ^~
list.c:33:9: error: expected identifier or ‘(’ before ‘>’ token
   33 |     List>fin=NULL;
      |         ^
Compilation failed
067305d
Thu 18 Aug 2022 02:03:10 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: expected identifier or ‘(’ before ‘->’ token
   32 |     List->inicio=NULL;
      |         ^~
list.c:33:9: error: expected identifier or ‘(’ before ‘->’ token
   33 |     List->fin=NULL;
      |         ^~
Compilation failed
ba57c3b
Thu 18 Aug 2022 02:04:49 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: expected identifier or ‘(’ before ‘=’ token
   32 |     List=NULL;
      |         ^
Compilation failed
39b3ec7
Thu 18 Aug 2022 02:05:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:6: error: expected expression before ‘List’
   32 |     *List=NULL;
      |      ^~~~
Compilation failed
83f1e1e
Thu 18 Aug 2022 02:05:10 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: expected identifier or ‘(’ before ‘=’ token
   32 |     List=NULL;
      |         ^
Compilation failed
d4b5f3c
Thu 18 Aug 2022 02:05:56 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |     List *lista=NULL;
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
f8b4318
Thu 18 Aug 2022 02:06:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9ce95f8
Thu 18 Aug 2022 02:06:55 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:13: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘List *’ {aka ‘struct List *’} was expected
   33 |      return *lista;
      |             ^~~~~~
list.c:34:1: error: control reaches end of non-void function [-Werror=return-type]
   34 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1e8baf6
Thu 18 Aug 2022 02:07:12 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9091822
Thu 18 Aug 2022 02:11:00 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:19: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   33 |     *lista=calloc(lista,sizeof(List));
      |                   ^~~~~
      |                   |
      |                   List * {aka struct List *}
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘List *’ {aka ‘struct List *’}
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
In file included from test.c:5:
list.c:33:12: error: incompatible types when assigning to type ‘List’ {aka ‘struct List’} from type ‘void *’
   33 |     *lista=calloc(lista,sizeof(List));
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
86c2bda
Thu 18 Aug 2022 02:12:26 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:18: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   33 |     lista=calloc(lista,sizeof(List));
      |                  ^~~~~
      |                  |
      |                  List * {aka struct List *}
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘List *’ {aka ‘struct List *’}
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
In file included from test.c:5:
list.c:33:11: error: ‘lista’ is used uninitialized in this function [-Werror=uninitialized]
   33 |     lista=calloc(lista,sizeof(List));
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
616e4b8
Thu 18 Aug 2022 02:13:06 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:26: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   33 |     lista=(List *)calloc(lista,sizeof(List));
      |                          ^~~~~
      |                          |
      |                          List * {aka struct List *}
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘List *’ {aka ‘struct List *’}
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
In file included from test.c:5:
list.c:33:19: error: ‘lista’ is used uninitialized in this function [-Werror=uninitialized]
   33 |     lista=(List *)calloc(lista,sizeof(List));
      |                   ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e8280bf
Thu 18 Aug 2022 02:15:05 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
15a11b2
Thu 18 Aug 2022 06:29:01 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d991cf7
